[gd_scene load_steps=6 format=3 uid="uid://wg8ktgwrhuuk"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_rbirp"]
[ext_resource type="Texture2D" uid="uid://7xcxxkrtvqj4" path="res://Assets/World/SpaceBackground1.jpg" id="2_n2qqe"]
[ext_resource type="Theme" uid="uid://ci6vyum7dq5e1" path="res://Scenes/Adumu_Theme.tres" id="2_qvoit"]
[ext_resource type="PackedScene" uid="uid://bq3egut176msl" path="res://Scenes/options.tscn" id="2_vhep5"]
[ext_resource type="Texture2D" uid="uid://ctstv3j2woble" path="res://Assets/Buttons/Pink.png" id="4_df2yo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("2_qvoit")
script = ExtResource("1_rbirp")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = -152.0
offset_top = -18.0
offset_right = 584.0
offset_bottom = 327.0
theme = ExtResource("2_qvoit")
texture = ExtResource("2_n2qqe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 31.0
offset_top = 36.0
offset_right = 331.0
offset_bottom = 236.0
theme_override_constants/separation = 60

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PinkDude"

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 119.0
offset_top = 1.0
offset_right = 477.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Margins"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Margins/HBoxContainer"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="BtnOptions" type="Button" parent="Margins/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
text = "
"
icon = ExtResource("4_df2yo")

[node name="BtnExit" type="Button" parent="Margins/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="BtnPlay" type="Button" parent="Margins/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play
"

[node name="Options" parent="." instance=ExtResource("2_vhep5")]
layout_mode = 1
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
